[tool.poetry]
name = "music-player"
version = "0.0.1"
description = "A simple music player in flet"
authors = ["Lucifer516"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
